.omo/evidence/controller-webhook-split-deployment/combined/live-combined-20260727242000/admission-mutating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T15:13:28Z"
  generation: 1
  name: echo-operator.echo-smoke-combined-live-combined-20260727242000.echo.example.com
  resourceVersion: "2227660"
  uid: 504da8e8-da26-4dd4-9086-ccd8643d50cc
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURmRENDQW1TZ0F3SUJBZ0lWQVBLVEpHcjVFUnlvRS9nVWl5SXFJRmJXeHNlYU1BMEdDU3FHU0liM0RRRUIKQ3dVQU1GUXhVakJRQmdOVkJBTU1TV1ZqYUc4dGMyMXZhMlV0WTI5dFltbHVaV1F0YkdsMlpTMWpiMjFpYVc1bApaQzB5TURJMk1EY3lOekkwTWpBd01DMWxZMmh2TFc5d1pYSmhkRzl5SUhkbFltaHZiMnNnUTBFd0hoY05Nall3Ck56STNNVFV4TXpJM1doY05NamN3TnpJM01UVXhNekkzV2pCVU1WSXdVQVlEVlFRRERFbGxZMmh2TFhOdGIydGwKTFdOdmJXSnBibVZrTFd4cGRtVXRZMjl0WW1sdVpXUXRNakF5TmpBM01qY3lOREl3TURBdFpXTm9ieTF2Y0dWeQpZWFJ2Y2lCM1pXSm [...]
    service:
      name: echo-smoke-combined-live-combined-20260727242000-echo-operator
      namespace: echo-smoke-combined-live-combined-20260727242000
      path: /mutate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-combined-live-combined-20260727242000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
